# rules_steam

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  defs.bzl  depotdownloader.bzl  depotdownloader_version.bzl  deps.bzl  extension.bzl  nugets.bzl  paket.bzl  renovate.json  repos.bzl  repositories.bzl  steam.bzl  toolchain.bzl
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml  renovate.yml  test.yml  update-example.yml  update.yml
downloader/: depotdownloader.BUILD  test.sh
example/: BUILD.bazel
examples/: BUILD.bazel  steamapps.bzl  update-steamapps.sh
generate/: BUILD.bazel  ContentDownloader.cs  Main.cs  README.md  Steam3Session.cs  Util.cs  paket.dependencies  update-paket.sh
generate/paket/: paket.main.bzl
update/: requirements.txt  update.py
