module(name = "rules_steam")

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_dotnet", version = "0.20.5")

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "9.0.100")

use_repo(dotnet, "dotnet_toolchains")

register_toolchains("@dotnet_toolchains//:all")

main_extension = use_extension("//generate/paket:paket.main_extension.bzl", "main_extension")

use_repo(main_extension, "paket.main")

steamapps = use_extension("//examples:steamapps.bzl", "steamapps_bzlmod")
use_repo(steamapps, "scpsl_dedicated_server")
