load("@rules_pkg//:pkg.bzl", "pkg_tar")

filegroup(
    name = "examples",
    srcs = [
        ":battlebit_dedicated",
        ":steamworks_linux",
    ],
)

# These examples aren't very interesting as all the fun happens over in your `MODULE.bazel`.

pkg_tar(
    name = "steamworks_linux",
    srcs = ["@steamworks_linux//:files"],
)

pkg_tar(
    name = "battlebit_dedicated",
    srcs = ["@battlebit_dedicated//:files"],
    package_dir = "/opt/battlebit",
)
