load("@rules_pkg//:pkg.bzl", "pkg_tar")

filegroup(
    name = "examples",
    srcs = [
        ":battlebit_dedicated",
        ":steamworks",
    ],
)

pkg_tar(
    name = "steamworks",
    srcs = ["@steamworks//:files"],
)

pkg_tar(
    name = "battlebit_dedicated",
    srcs = ["@battlebit_dedicated//:files"],
    package_dir = "/opt/battlebit",
)
