load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "scpsl_dedicated_server_layer",
    srcs = ["@scpsl_dedicated_server//:files"],
    package_dir = "/opt/scpsl",
)

build_test(
    name = "examples",
    targets = [
        ":scpsl_dedicated_server_layer",
    ],
)
